// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BracedText matches snapshot 1`] = `
<span
  class="braced-text"
>
  <span
    class="brace-text"
  >
    00,000.0
  </span>
  <span
    class="real-text"
  >
    23.3
  </span>
</span>
`;

exports[`BracedText matches snapshot with padFractionalPart 1`] = `
<span
  class="braced-text"
>
  <span
    class="brace-text"
  >
    00,000.000
  </span>
  <span
    class="real-text"
  >
    23.3
    <span
      class="zero-pad"
    >
      00
    </span>
  </span>
</span>
`;
